--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-forms-lib": "^2.0.1",
+		"yup": "^1.0.2"
+	}
 }
