--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-forms-lib": "^2.0.1",
+		"@tailwindcss/forms": "^0.5.3",
 		"yup": "^1.0.2"
 	}
 }
